<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kumuluz.ee.logs</groupId>
    <artifactId>kumuluzee-logs</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <modules>
        <module>common</module>
        <module>jul</module>
        <module>log4j2</module>
        <module>fluentd</module>
        <module>audit</module>
    </modules>
    <packaging>pom</packaging>

    <name>KumuluzEE Logs</name>

    <inceptionYear>2017</inceptionYear>
    <description>
        Logging management extensions for the lightweight Kumuluz EE framework.
    </description>

    <url>https://ee.kumuluz.com</url>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <kumuluzee.version>5.0.0-SNAPSHOT</kumuluzee.version>
        <arquillian.version>1.8.0.Final</arquillian.version>
        <kumuluzee-arquillian-container.version>2.0.0-SNAPSHOT</kumuluzee-arquillian-container.version>

        <nexus.staging.plugin.version>1.6.13</nexus.staging.plugin.version>
        <gpg.plugin.version>3.1.0</gpg.plugin.version>
        <jakarta-xml-bind-api.version>4.0.1</jakarta-xml-bind-api.version>
        <jaxb-impl.version>4.0.4</jaxb-impl.version>
        <jackson-databind.version>2.15.3</jackson-databind.version>

        <weld-junit5.version>4.0.1.Final</weld-junit5.version>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:kumuluz/kumuluzee-logs.git</connection>
        <developerConnection>scm:git:git@github.com:kumuluz/kumuluzee-logs.git</developerConnection>
        <url>git@github.com:kumuluz/kumuluzee-logs.git</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/kumuluz/kumuluzee-logs/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>Tilen Faganel</name>
            <id>tfaga</id>
            <email>tilen.faganel@me.com</email>
            <url>https://github.com/TFaga</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <name>OSS Sonatype repo (snapshots)</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kumuluz.ee</groupId>
                <artifactId>kumuluzee-bom</artifactId>
                <version>${kumuluzee.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.logs</groupId>
                <artifactId>kumuluzee-logs-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kumuluz.ee.logs</groupId>
                <artifactId>kumuluzee-logs-log4j2</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kumuluz.ee.logs</groupId>
                <artifactId>kumuluzee-logs-jul</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.logs</groupId>
                <artifactId>kumuluzee-logs-fluentd</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.logs</groupId>
                <artifactId>kumuluzee-logs-audit</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>${arquillian.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${nexus.staging.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deploy</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>java9-modules</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>jakarta.xml.bind</groupId>
                    <artifactId>jakarta.xml.bind-api</artifactId>
                    <version>${jakarta-xml-bind-api.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.sun.xml.bind</groupId>
                    <artifactId>jaxb-impl</artifactId>
                    <version>${jaxb-impl.version}</version>
                    <scope>runtime</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

</project>